# librevote

./: .gitignore  AGENTS.md  CMakeLists.txt  go.mod  go.sum  known-bugs.md  librevote-presentation-ru.md  main.cpp
cmd/librevote/: main.go
docs/: architecture.md  ballots.md  ballots.ru.md  blind-token-issuance.md  blind-token-issuance.ru.md  cli.md  cli.ru.md  crypto-layer.md  crypto-layer.ru.md  data-model.md  data-model.ru.md  implementation-plan.md  implementation-plan.ru.md  network-layer.md  network-layer.ru.md  node-lifecycle.md  node-lifecycle.ru.md  protocol-messages.md  protocol-messages.ru.md  storage-layer.md  storage-layer.ru.md  tally-layer.md  tally-layer.ru.md  threat-model.md  threat-model.ru.md  transport-layer.md  transport-layer.ru.md  trustee-selection.md  trustee-selection.ru.md  validation-layer.md  validation-layer.ru.md
internal/app/: nodestart.go  nodestart_test.go  service.go  service_internal_test.go  service_test.go
internal/cli/: cli.go  cli_test.go  commands.go  demokey.go
internal/crypto/: hash.go  hash_test.go  key.go  key_test.go  object.go  object_test.go  pow.go  pow_test.go  secret.go  secret_test.go  signature.go  signature_test.go
internal/discovery/: discovery.go  discovery_test.go  identity.go
internal/domain/: canonical.go  canonical_test.go  domain.go  domain_test.go  envelope.go  envelope_test.go  payload.go  payload_test.go
internal/frontend/: frontend.go  frontend_test.go  static.go
internal/gossip/: announcement.go  gossip.go  gossip_test.go
internal/storage/: conflicts.go  conflicts_test.go  contextual.go  contextual_test.go  dependencies_test.go  ingest.go  ingest_test.go  keys.go  keys_test.go  metadata.go  metadata_test.go  outcome.go  outcome_metadata.go  outcome_test.go  revalidation.go  revalidation_execution.go  revalidation_test.go  schema.go  schema_test.go  storage.go  storage_test.go  sync.go  sync_test.go  validation_runner.go  worklist.go  worklist_test.go
internal/sync/: sync.go  sync_test.go  transport.go
internal/transport/: http.go  http_test.go
internal/validation/: ballot_tally.go  conflicts.go  conflicts_test.go  contextual.go  contextual_runner_test.go  contextual_test.go  envelope.go  envelope_test.go  outcome.go  outcome_test.go  planner.go  planner_test.go  revalidation_test.go  runner.go  runner_test.go  status.go  status_test.go  structural.go  (+3 more)
scripts/: demo-mvp.sh  frontend-docker.sh  smoke-frontend.sh
src/: CMakeLists.txt
src/crypto/: hash.cpp  hash.h  keypair.cpp  keypair.h  signature.cpp  signature.h
src/network/: dht.cpp  dht.h  node_id.cpp  node_id.h  routing_table.cpp  routing_table.h
src/transport/: p2p_node.cpp  p2p_node.h  udp_transport.cpp  udp_transport.h
src/votes/: ballot.cpp  ballot.h  vote_storage.cpp  vote_storage.h
tests/: dht_test.cpp
